app/eventyay/static/orga/css/_layout.css
/* ... */
#main-title {
  display: flex;
  flex-wrap: wrap;
  font-weight: 200;
  margin-bottom: 20px;
}

#main-title .navigation-button {
  margin-left: auto;
}

#main-title .navigation-title {
  text-align: left;
  flex: 0 1 75%;
  min-width: 0;
}

#main-title .navigation-title h2 {
  font-size: 30px;
  font-weight: 500;
  line-height: 1.2;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

#main-title .navigation-title h2 .event-date {
  font-size: 65%;
  font-weight: 400;
  line-height: 1;
}

.speaker-info {
  display: flex;
  flex-direction: row;

  .speaker-image img {
    max-height: 160px;
    float: right;
  }
}

footer {
  margin-top: var(--size-spacer);
  text-align: center;
  font-size: 11px;
}

.form-control.tt-hint[readonly] {
  background-color: var(--color-bg) !important;
}

.search-form {
  display: flex;
  flex-wrap: wrap;
  align-content: center;
  width: 100%;

  &>.form-group {
    width: 300px;
    display: flex;
    margin-right: 16px;

    [type="text"] {
      height: 2.5rem;
    }

    label {
      display: none;
    }

    .form-control.is-valid {
      background-image: none;
    }
  }

  button,
  [role="button"],
  details {
    align-self: flex-start;
    margin-top: auto;
    margin-bottom: 16px;
  }

  button,
  [role="button"] {
    margin-right: 16px;
    margin-left: auto;
  }

  #pending .form-group {
    margin-bottom: 0;
  }

  #pending label {
    display: inline-block;
    color: #6c757d;
  }
}

.filter-form {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;

  &>* {
    flex: 1;
  }

  .form-group {
    margin-right: 8px;

    .form-control.is-valid {
      background-image: none;
    }
  }
}

.submit-group.search-submit-group {
  form>.form-group {
    padding-bottom: 8px;
  }
}

.submit-group form {
  .form-group,
  button {
    margin-bottom: 0;
  }
}

.dashboard-history {
  max-height: none;

  .list-group {
    .logentry {
      flex-direction: row;

      &>* {
        display: inline-block;
      }

      >span {
        padding-right: 8px;
        width: 350px;

        &.time,
        &.person {
          width: 200px;
        }

        &.log-object {
          width: 250px;
        }

        br {
          display: none;
        }
      }
    }
  }
}

td.reviewer {
  display: flex;
  flex-direction: row;
}

td.review-text,
th.review-text {
  min-width: 20em;
}

.markdown-mt-0>p:first-child {
  margin-top: 0;
}

#review-form .submission-state.badge {
  padding: 0.2em 0.5em;
}

form #id_header_pattern,
form #id_display-header_pattern {
  display: flex;
  padding: 0;
  overflow-x: auto;

  &>div {
    position: relative;
  }

  input[type="radio"] {
    position: absolute;
    top: 10px;
    left: 10px;

    &+label.header-pattern-label {
      padding: 0;
    }
  }

  .mini-header {
    width: 100px;
    height: 100px;
    background-color: var(--color, var(--color-primary));
    border-radius: var(--size-border-radius);
    margin-right: 8px;
    margin-bottom: -10px;
  }
}

.form-plugins {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: stretch;
  align-content: stretch;

  .plugin-card {
    margin: 16px;
    width: 40%;
    flex-grow: 1;
    flex-shrink: 0;

    .card-header {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: baseline;
      font-weight: bold;

      .btn {
        max-width: 150px;
      }
    }
  }
}

h2 .submission-state-dropdown {
  padding: 2px;
}

details.submission-state-dropdown {
  display: inline-flex;
  border-radius: 6px;
  background-image: repeating-linear-gradient(315deg,
      var(--submission-color-primary),
      var(--submission-color-primary) 8px,
      var(--submission-color-secondary) 8px,
      var(--submission-color-secondary) 16px);
  padding: 3px;

  summary {
    color: var(--submission-color-primary);
    background-color: white;
    padding: 0.5rem;

    h4 {
      font-size: 0.875rem;
      margin-bottom: 0;
      display: inline-flex;
      align-items: baseline;

      &>i.fa:first-child {
        padding: 0 6px 0 3px;
      }
    }

    .pending-indicator {
      padding-left: 2px;
      white-space: nowrap;
    }

    &:hover {
      background-color: inherit;
      color: white;
    }

    &>i.fa.fa-caret-down {
      margin-left: 10px;
    }
  }

  .dropdown-content {
    z-index: 1000;

    a.dropdown-item {
      color: var(--submission-color-primary);

      &:hover {
        background-color: var(--submission-color-primary);
        color: white;
      }
    }
  }

  a {
    font-weight: bold;
    font-size: 16px;
  }
}

.cfp-option-table {
  display: table;

  input:not([type="checkbox"]):not([type="radio"]),
  select {
    margin: 4px auto;
  }

  thead th {
    line-height: 1;
    vertical-align: top;
    text-align: center;
  }

  tbody th {
    text-align: right;
    padding-right: 8px;
    padding-top: 16px;
  }

  input[type="number"] {
    width: 64px;
  }

  .form-group {
    margin-bottom: 0;
  }

  td>.form-group {
    display: flex;
    justify-content: center;
  }

  label {
    display: none;
  }
}

#id_locales.checkbox,
#id_initial-locales.checkbox,
#id_tags {
  padding: 0;

  label {
    display: inline-block !important;
    margin-bottom: 8px;
  }
}
/* ... */

